--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
    filter: blur(4px);
 }
 
+#pokemon-container article {
+   transition: filter 0.3s ease 1s; /* unscharf wird verzögert */
+}
+#pokemon-container article:hover,
+#pokemon-container:has(article:hover) article:hover {
+   transition-delay: 0s; /* zurück sofort */
+}
+
 body {
    margin: 0;
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
